spacing and css fix

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,13 @@ a:hover {
 .flex-heading {
     display: flex;
     justify-content: space-between;
-    padding-left: 5px; border-width: 3px; border-style: groove; margin-right: 33%; border-color: red; border-top: white; border-right: white;
+    padding-left: 5px;
+    border-width: 3px;
+    border-style: groove;
+    margin-right: 33%;
+    border-color: red;
+    border-top: white;
+    border-right: white;
 }
 .prev-next {
     margin: 0px;
